# MAT201B_Projects

./: .gitignore  p1.cpp  p2.cpp  p3.cpp
corvid/: CMakeLists.txt  pins.toml  run_demo.sh  run_torch_smoke.sh
corvid/.github/workflows/: build.yml
corvid/cognition/: LlmSmoke.cpp  LlmSmoke.hpp  Perception.cpp  Perception.hpp  RavenBrain.cpp  RavenBrain.hpp  RavenNetConfig.hpp
corvid/core/: Agent.hpp  Memory.hpp  MemoryRing.hpp  Place.hpp  SimpleSharedState.hpp  SpatialHash.hpp
corvid/docs/decisions/: DECISIONS.md
corvid/environment/: AcornPlant.hpp  BoulderObstacle.hpp  Entity.hpp  HawkPredator.hpp
corvid/reactive/: Boids.hpp
corvid/src/: main_corvid.cpp  main_llm_smoke.cpp  main_p1.cpp  main_p2.cpp  main_p3.cpp  main_torch_smoke.cpp
corvid/test/: test_place_kahan.cpp
corvid/training/: PPOBuffer.hpp
